apps/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: apps
spec:
  selector:
    app: homer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
